@@ -24,7 +24,7 @@ import org.junit.Test;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.PrintWriter;
-import java.util.Arrays;
+import java.util.List;
 
 public class FastSerializerTest {
 
@@ -32,7 +32,7 @@ public class FastSerializerTest {
         try {
             new TaggedFastSerializer(
                 Instantiators.NOARG,
-                Arrays.asList(new TypeDesc(1, new BaseTypeHandler<Color>(Color.class) {
+                List.of(new TypeDesc(1, new BaseTypeHandler<>(Color.class) {
                     @Override public Color read(final Reader reader) {
                         return null;
                     }
@@ -40,7 +40,7 @@ public class FastSerializerTest {
                         // empty
                     }
                 })),
-                Arrays.asList()
+                List.of()
             );
             Assert.fail();
         } catch (final IllegalArgumentException e) {
@@ -50,7 +50,7 @@ public class FastSerializerTest {
 
     @Test public void duplicatedClass() {
         try {
-            new TaggedFastSerializer(Instantiators.NOARG, Arrays.asList(), Arrays.asList(Color.class, Color.class));
+            new TaggedFastSerializer(Instantiators.NOARG, List.of(), List.of(Color.class, Color.class));
             Assert.fail();
         } catch (final IllegalArgumentException e) {
             Assert.assertEquals("type 'ch.softappeal.yass.serialize.contract.Color' already added", e.getMessage());
@@ -59,7 +59,7 @@ public class FastSerializerTest {
 
     @Test public void abstractClass() {
         try {
-            new SimpleFastSerializer(Instantiators.NOARG, Arrays.asList(), Arrays.asList(FastSerializer.class));
+            new SimpleFastSerializer(Instantiators.NOARG, List.of(), List.of(FastSerializer.class));
             Assert.fail();
         } catch (final IllegalArgumentException e) {
             Assert.assertEquals("type 'ch.softappeal.yass.serialize.fast.FastSerializer' is abstract", e.getMessage());
@@ -68,7 +68,7 @@ public class FastSerializerTest {
 
     @Test public void illegalInterface() {
         try {
-            new SimpleFastSerializer(Instantiators.NOARG, Arrays.asList(), Arrays.asList(AutoCloseable.class));
+            new SimpleFastSerializer(Instantiators.NOARG, List.of(), List.of(AutoCloseable.class));
             Assert.fail();
         } catch (final IllegalArgumentException e) {
             Assert.assertEquals("type 'java.lang.AutoCloseable' is abstract", e.getMessage());
@@ -77,7 +77,7 @@ public class FastSerializerTest {
 
     @Test public void illegalAnnotation() {
         try {
-            new SimpleFastSerializer(Instantiators.NOARG, Arrays.asList(), Arrays.asList(Nullable.class));
+            new SimpleFastSerializer(Instantiators.NOARG, List.of(), List.of(Nullable.class));
             Assert.fail();
         } catch (final IllegalArgumentException e) {
             Assert.assertEquals("type 'ch.softappeal.yass.util.Nullable' is abstract", e.getMessage());
@@ -86,7 +86,7 @@ public class FastSerializerTest {
 
     @Test public void illegalEnumeration() {
         try {
-            new SimpleFastSerializer(Instantiators.NOARG, Arrays.asList(), Arrays.asList(), Arrays.asList(Color.class));
+            new SimpleFastSerializer(Instantiators.NOARG, List.of(), List.of(), List.of(Color.class));
             Assert.fail();
         } catch (final IllegalArgumentException e) {
             Assert.assertEquals("type 'ch.softappeal.yass.serialize.contract.Color' is an enumeration", e.getMessage());
@@ -94,7 +94,7 @@ public class FastSerializerTest {
     }
 
     @Test public void missingType() throws Exception {
-        final Serializer serializer = new TaggedFastSerializer(Instantiators.NOARG, Arrays.asList(), Arrays.asList());
+        final Serializer serializer = new TaggedFastSerializer(Instantiators.NOARG, List.of(), List.of());
         try {
             JavaSerializerTest.copy(serializer, Color.BLUE);
             Assert.fail();
@@ -132,11 +132,11 @@ public class FastSerializerTest {
 
     private static final Serializer V1_SERIALIZER = new TaggedFastSerializer(
         Instantiators.NOARG,
-        Arrays.asList(new TypeDesc(3, BaseTypeHandlers.INTEGER)), Arrays.asList(E1.class, C1.class)
+        List.of(new TypeDesc(3, BaseTypeHandlers.INTEGER)), List.of(E1.class, C1.class)
     );
     private static final Serializer V2_SERIALIZER = new TaggedFastSerializer(
         Instantiators.NOARG,
-        Arrays.asList(new TypeDesc(3, BaseTypeHandlers.INTEGER)), Arrays.asList(E2.class, C2.class)
+        List.of(new TypeDesc(3, BaseTypeHandlers.INTEGER)), List.of(E2.class, C2.class)
     );
 
     private static Object copy(final Object input) throws Exception {
@@ -165,7 +165,7 @@ public class FastSerializerTest {
 
     @Test public void missingClassTag() {
         try {
-            new TaggedFastSerializer(Instantiators.NOARG, Arrays.asList(), Arrays.asList(MissingClassTag.class));
+            new TaggedFastSerializer(Instantiators.NOARG, List.of(), List.of(MissingClassTag.class));
             Assert.fail();
         } catch (final IllegalArgumentException e) {
             Assert.assertEquals("missing tag for 'class ch.softappeal.yass.serialize.test.FastSerializerTest$MissingClassTag'", e.getMessage());
@@ -174,7 +174,7 @@ public class FastSerializerTest {
 
     @Test public void duplicatedTypeTag() {
         try {
-            new TaggedFastSerializer(Instantiators.NOARG, Arrays.asList(), Arrays.asList(C1.class, C2.class));
+            new TaggedFastSerializer(Instantiators.NOARG, List.of(), List.of(C1.class, C2.class));
             Assert.fail();
         } catch (final IllegalArgumentException e) {
             System.out.println(e.getMessage());
@@ -187,7 +187,7 @@ public class FastSerializerTest {
 
     @Test public void invalidTypeTag() {
         try {
-            new TaggedFastSerializer(Instantiators.NOARG, Arrays.asList(), Arrays.asList(InvalidTypeTag.class));
+            new TaggedFastSerializer(Instantiators.NOARG, List.of(), List.of(InvalidTypeTag.class));
             Assert.fail();
         } catch (final IllegalArgumentException e) {
             Assert.assertEquals("id -1 for type 'ch.softappeal.yass.serialize.test.FastSerializerTest.InvalidTypeTag' must be >= 0", e.getMessage());
@@ -200,7 +200,7 @@ public class FastSerializerTest {
 
     @Test public void invalidFieldTag() {
         try {
-            new TaggedFastSerializer(Instantiators.NOARG, Arrays.asList(), Arrays.asList(InvalidFieldTag.class));
+            new TaggedFastSerializer(Instantiators.NOARG, List.of(), List.of(InvalidFieldTag.class));
             Assert.fail();
         } catch (final IllegalArgumentException e) {
             Assert.assertEquals(
@@ -217,7 +217,7 @@ public class FastSerializerTest {
 
     @Test public void duplicatedFieldTag() {
         try {
-            new TaggedFastSerializer(Instantiators.NOARG, Arrays.asList(), Arrays.asList(DuplicatedFieldTag.class));
+            new TaggedFastSerializer(Instantiators.NOARG, List.of(), List.of(DuplicatedFieldTag.class));
             Assert.fail();
         } catch (final IllegalArgumentException e) {
             System.out.println(e.getMessage());
